"fixed" bottom overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
 	#root,
 	html,
 	body {
+		display: flex;
+		flex-direction: column;
 		height: 100vh;
 	}
 
@@ -28,10 +30,11 @@
 		@apply text-lg font-bold mb-2;
 	}
 	/* only for debugging */
-
+	/*
 	div {
 		border: 1px dotted hotpink;
 	}
+*/
 }
 
 @layer components {
